<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

	<TextView android:text="@string/enter_device_url"
	          android:textSize="18sp"
	          android:layout_width="fill_parent"
	          android:layout_height="wrap_content"
	          android:textStyle="bold" />

	<EditText android:id="@+id/add_server_controller_url_edit_text"
	          android:layout_width="fill_parent"
	          android:layout_height="wrap_content" />

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/button_bar_add_server" android:layout_width="fill_parent"
	android:layout_height="wrap_content" android:orientation="horizontal"
	android:background="@color/dark_gray" android:layout_gravity="bottom">

	<Button android:id="@+id/add_server_save_button" android:text="@string/save"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_weight="1" android:layout_margin="3px" />

	<Button android:id="@+id/add_server_cancel_button"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_weight="1" android:layout_margin="3px" android:text="@string/cancel" />
</LinearLayout>

	
</LinearLayout>